docs(benchmark): 记录官方 driver 端到端跑通、官方口径实测延迟与暴露的三个问题
一、把"用官方脚本对比"这条路走通并写清要素（新增 §2.3）
   * 官方 driver jar：本机无 Maven/mvnw/~/.m2，已下 Maven 3.9.16，用
     `mvn -q clean package -DskipTests -Pcypher` 构建出 cypher-1.2.0-SNAPSHOT.jar；
   * JDK 25 需 `--add-exports java.base/sun.nio.ch=ALL-UNNAMED
     --add-opens java.base/java.nio=ALL-UNNAMED`（SBE 的 DirectBuffer），否则 IllegalAccessError；
   * **官方 driver 用的 neo4j-java-driver 4.4.3 可直连 eugraph**（BASIC 认证，密码 eugraph）；
   * 官方 substitution parameters 地址（datasets.ldbcouncil.org/...-sf0.1.tar.zst）与本库
     sf0.1 数据**同一 id 空间**，可直接使用；
   * 官方 `PASSED SCHEDULE AUDIT` 已通过（关闭 complex-5、1 线程 250 操作，吞吐 1.89 op/s）。

二、官方口径实测延迟（warmup 阶段）写入 §2.3.1。与 §2 的关系已在文档中说明：§2 用文件自带
   参数 + 我选定的 messageId，本节用官方 16 组随机参数与官方调度器，**两者不可互相加减**，
   对外可比的是官方口径。

三、官方口径暴露的三个 eugraph 侧问题（§2.3.2，均待修）
   1. **complex-5 在官方参数下挂死**：单线程直接跑 >400 s 不返回、服务端多线程持续满载；
      官方 driver 跑到该查询时整个 run 停滞。§5.2 的 join order / IN 下推问题在官方参数下
      更容易命中，列为 P0。
   2. **长连接被断开会打挂官方 driver**：跑到 LdbcShortQuery2PersonPosts 时客户端
      ServiceUnavailableException 终止整个 run，同一时刻服务端有 read error 与
      query cancelled。即 known-defects-todo §7 的已知缺陷——自写脚本靠每轮新建连接绕过，
      官方 driver 不会绕，**修掉它是能跑完整官方 benchmark 的前置条件**。
   3. **short-4/5/6/7 在官方参数下比 neo4j 慢 5–14×**（1955/546/558/553 ms vs 68–155 ms），
      而 short-1/2/3 同档（2–7 ms）。形状集中在 `Message{id}` 的索引点查路径。

四、§7 复现命令重排为 7.1 加载 / 7.2 官方 driver / 7.3 自写 A/B，并写明两个必须先做的准备：
   loader 建索引后**必须重启实例**（否则 Tag(name) 点查 51630 ms vs 45 ms），以及
   官方 driver 的 properties 关键项与 disable-updates 等价写法。